@@ -7,6 +7,7 @@ import com.loopperfect.buckaroo.*;
 import com.loopperfect.buckaroo.serialization.Serializers;
 import org.junit.Test;
 
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.FileSystem;
 import java.nio.file.Files;
@@ -28,7 +29,7 @@ public final class InstallExistingTasksTest {
                 RecipeIdentifier.of("loopperfect", "valuable"),
                 ResolvedDependency.of(Either.right(
                     RemoteArchive.of(
-                        new URL("https://github.com/LoopPerfect/valuable/archive/v0.1.0.zip"),
+                        new URI("https://github.com/LoopPerfect/valuable/archive/v0.1.0.zip"),
                         HashCode.fromString("639d7d0df95f8467f4aa8da71dd4a1fd3400f1d04b84954beb2f514ec69934c0"),
                         "valuable-0.1.0"))))));
 
@@ -58,7 +59,7 @@ public final class InstallExistingTasksTest {
                 RecipeIdentifier.of("loopperfect", "valuable"),
                 ResolvedDependency.of(Either.right(
                     RemoteArchive.of(
-                        new URL("https://github.com/LoopPerfect/valuable/archive/v0.1.0.zip"),
+                        new URI("https://github.com/LoopPerfect/valuable/archive/v0.1.0.zip"),
                         HashCode.fromString("639d7d0df95f8467f4aa8da71dd4a1fd3400f1d04b84954beb2f514ec69934c0"),
                         "valuable-0.1.0"))))));
 
@@ -75,7 +76,7 @@ public final class InstallExistingTasksTest {
                 RecipeIdentifier.of("loopperfect", "neither"),
                 ResolvedDependency.of(Either.right(
                     RemoteArchive.of(
-                        new URL("https://github.com/LoopPerfect/neither/archive/v0.0.1.zip"),
+                        new URI("https://github.com/LoopPerfect/neither/archive/v0.0.1.zip"),
                         HashCode.fromString("f88bd7e72e509bead972fa4d93f6a9791e85c7d8b322a636e81df84a28d56fe1"),
                         "neither-0.0.1")))),
 
@@ -83,7 +84,7 @@ public final class InstallExistingTasksTest {
                 RecipeIdentifier.of("loopperfect", "valuable"),
                 ResolvedDependency.of(Either.right(
                     RemoteArchive.of(
-                        new URL("https://github.com/LoopPerfect/valuable/archive/v0.1.0.zip"),
+                        new URI("https://github.com/LoopPerfect/valuable/archive/v0.1.0.zip"),
                         HashCode.fromString("639d7d0df95f8467f4aa8da71dd4a1fd3400f1d04b84954beb2f514ec69934c0"),
                         "valuable-0.1.0"))))
         ));
@@ -107,7 +108,7 @@ public final class InstallExistingTasksTest {
                 RecipeIdentifier.of("loopperfect", "valuable"),
                 ResolvedDependency.of(Either.right(
                     RemoteArchive.of(
-                        new URL("https://github.com/LoopPerfect/valuable/archive/v0.1.0.zip"),
+                        new URI("https://github.com/LoopPerfect/valuable/archive/v0.1.0.zip"),
                         HashCode.fromString("aaaaaaaaaaaaaaaaaaaaaaa71dd4a1fd3400f1d04b84954beb2f514ec69934c0"),
                         "valuable-0.1.0"))))));
 
